# Gravital-Steward

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  pr-description.yml
crates/steward-audit/: Cargo.toml
crates/steward-audit/src/: chain.rs  lib.rs
crates/steward-auth/: Cargo.toml
crates/steward-auth/src/: engine.rs  error.rs  lib.rs  spec.rs
crates/steward-core/: Cargo.toml
crates/steward-core/src/: capability.rs  error.rs  ids.rs  lib.rs  operation.rs  risk.rs
crates/steward-policy/: Cargo.toml
crates/steward-policy/src/: decision.rs  engine.rs  grant.rs  lib.rs
crates/steward-proto/: Cargo.toml
crates/steward-proto/src/: audit.rs  error.rs  lib.rs  manifest.rs
crates/steward-state/: Cargo.toml
crates/steward-state/src/: error.rs  lib.rs  store.rs  token.rs
docs/adr/: ADR-0001-pure-rust-static-binary.md  ADR-0002-licensing.md  ADR-0003-mandatory-idempotency-and-reversibility.md  README.md
docs/rfc/: README.md  RFC-0000-template.md  RFC-0001-steward-core.md  RFC-0002-steward-policy.md  RFC-0003-steward-audit.md  RFC-0004-steward-state.md  RFC-0005-steward-auth.md
docs/runbooks/: README.md
docs/spec/: README.md
