[workspace]
resolver = "2"
members = [
    "crates/steward-core",
    "crates/steward-proto",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82"
authors = ["Angel Nereira <contact@angelnereira.com>"]
repository = "https://github.com/gravital-cloud/gravital-steward"
homepage = "https://github.com/gravital-cloud/gravital-steward"
readme = "README.md"

# Core execution crates are licensed AGPL-3.0-or-later; protocol and SDK crates
# are Apache-2.0. Each crate declares its own `license` field accordingly.

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
async-trait = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow a few pedantic lints that fight ergonomic, well-documented APIs.
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
# Optimize the single static binary for size and a clean, reproducible build.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
