[package]
name = "steward-audit"
description = "Append-only, BLAKE3 hash-chained, Ed25519-signed audit log for Gravital-Steward."
license = "AGPL-3.0-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
steward-proto = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
