[package]
name = "steward-core"
description = "Core domain types and the Operation lifecycle contract for Gravital-Steward."
license = "AGPL-3.0-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# Minimal `block_on` so lifecycle tests run without pulling a full async runtime
# into the core crate.
pollster = "0.3"

[lints]
workspace = true
