[package]
name = "steward-state"
description = "Embedded durable state store (redb) for Gravital-Steward: tokens, revocations, checkpoints, audit head."
license = "AGPL-3.0-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
steward-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
